--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,28 +114,30 @@ LastLevel=/Game/Solitary/Maps/Solitary
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat.Clock_glass_Med_ClockMat
+OpenAssetsAtExit=/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Solitary/Textures/Bible/Bible
-MRUItem1=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat
-MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat
-MRUItem3=/Game/Solitary/Textures/Door/Door_2_Solitary_Door_BaseColor
-MRUItem4=/Game/Solitary/Meshes/Final_Meshes/Clock/M_Clock_med_Clock_glass_Med_Clock_Clock_glass_Med_ClockMat_563606B649E7B3EEDEB53EA0205E6D37
-MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem6=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat
-MRUItem7=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_secondhand_lowMat
-MRUItem8=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_hour_hand_lowMat
-MRUItem9=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_minute_hand_low_HandsMat
-MRUItem10=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_baseMat
-MRUItem11=/Game/Towel
-MRUItem12=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem13=/Game/Solitary/Triggers/AudioTriggers
-MRUItem14=/Game/Solitary/Triggers/AudioTrigger
-MRUItem15=/Game/Solitary/Audio/165395__shawnyboy__white-noise_Cue
-MRUItem16=/Game/Solitary/Maps/Solitary
-MRUItem17=/Game/AVRFramework/AnimBP/Mannequin/AnimBP_Mannequin
-MRUItem18=/Game/Solitary/TriggerBox
-MRUItem19=/Game/AVRFramework/Sound/Waves/Camera/Blueprints_ComputerStatic01
+MRUItem0=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat
+MRUItem1=/Game/Solitary/Meshes/Final_Meshes/Clock/lambert1
+MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Clock/clock
+MRUItem3=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem4=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock
+MRUItem5=/Game/Solitary/Textures/Bible/Bible
+MRUItem6=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat
+MRUItem7=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat
+MRUItem8=/Game/Solitary/Textures/Door/Door_2_Solitary_Door_BaseColor
+MRUItem9=/Game/Solitary/Meshes/Final_Meshes/Clock/M_Clock_med_Clock_glass_Med_Clock_Clock_glass_Med_ClockMat_563606B649E7B3EEDEB53EA0205E6D37
+MRUItem10=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_secondhand_lowMat
+MRUItem11=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_hour_hand_lowMat
+MRUItem12=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_minute_hand_low_HandsMat
+MRUItem13=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_baseMat
+MRUItem14=/Game/Towel
+MRUItem15=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem16=/Game/Solitary/Triggers/AudioTriggers
+MRUItem17=/Game/Solitary/Triggers/AudioTrigger
+MRUItem18=/Game/Solitary/Audio/165395__shawnyboy__white-noise_Cue
+MRUItem19=/Game/Solitary/Maps/Solitary
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -668,6 +670,63 @@ StaticMeshComponent.Rendering=True
 StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+FbxImportUI.Animation=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Animation=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Sampling=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -696,12 +755,13 @@ StaticMeshComponent.Cooking=True
 /Game/Solitary/Textures/Bible/Bible.Bible=1
 /Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat.Solitary_CellDoor_Door_Flap_DoorFlapMat=1
 /Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat.Solitary_CellDoor_Window_Flap_WindowMat=1
+/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock.Clock_med_Clock_glass_Med_Clock=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1492,6 +1552,12 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Bo
 MaterialInstanceConstant=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/clock.clock;
+RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Hands_Clock_hour_hand_low.Clock_med_Med_Clock_Hands_Clock_hour_hand_low;
+RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Clock_minute_hand_low_Hands.Clock_med_Med_Clock_Clock_minute_hand_low_Hands;
+RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Clock_base.Clock_med_Med_Clock_Clock_base;
+RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock.Clock_med_Clock_glass_Med_Clock;
+RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Hands_Clock_secondhand_low.Clock_med_Med_Clock_Hands_Clock_secondhand_low;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Towel/Towel.Towel;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Pencil/Pencil_low03.Pencil_low03;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Bible/Bible_low03.Bible_low03;
@@ -1506,9 +1572,6 @@ RecentlyPlaced=/Game/Solitary/Meshes/bed.bed;
 RecentlyPlaced=/Game/Solitary/Meshes/toilet.toilet;
 RecentlyPlaced=/Game/AVRFramework/Blueprints/Helpers/BP_Helper_Debug.BP_Helper_Debug;
 RecentlyPlaced=/Game/AVRFramework/Blueprints/UI/Panel/BP_Menu.BP_Menu;
-RecentlyPlaced=/Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition.BP_PlayerPosition;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 
 [DetailPropertyExpansion]
 BP_GameMode_Solitary_C="\"Object.Levels.Levels\" "
@@ -1678,6 +1741,28 @@ bMaterialQualityUsed[2]=0
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+
 [SuppressableDialogs]
 Warning_EditingDefaultMaterial=False
 
@@ -1686,5 +1771,6 @@ PrimType=1
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
+StaticMeshActor.StaticMesh=True
 
 
