--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,30 +114,28 @@ LastLevel=/Game/Solitary/Maps/Solitary
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat.Clock_glass_Med_ClockMat
-OpenAssetsAtExit=/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat
-MRUItem1=/Game/Solitary/Meshes/Final_Meshes/Clock/lambert1
-MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Clock/clock
-MRUItem3=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem4=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock
-MRUItem5=/Game/Solitary/Textures/Bible/Bible
-MRUItem6=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat
-MRUItem7=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat
-MRUItem8=/Game/Solitary/Textures/Door/Door_2_Solitary_Door_BaseColor
-MRUItem9=/Game/Solitary/Meshes/Final_Meshes/Clock/M_Clock_med_Clock_glass_Med_Clock_Clock_glass_Med_ClockMat_563606B649E7B3EEDEB53EA0205E6D37
-MRUItem10=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_secondhand_lowMat
-MRUItem11=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_hour_hand_lowMat
-MRUItem12=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_minute_hand_low_HandsMat
-MRUItem13=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_baseMat
-MRUItem14=/Game/Towel
-MRUItem15=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem16=/Game/Solitary/Triggers/AudioTriggers
-MRUItem17=/Game/Solitary/Triggers/AudioTrigger
-MRUItem18=/Game/Solitary/Audio/165395__shawnyboy__white-noise_Cue
-MRUItem19=/Game/Solitary/Maps/Solitary
+MRUItem0=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
+MRUItem1=/Game/Solitary/Meshes/Final_Meshes/Clock/clock
+MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat
+MRUItem3=/Game/Solitary/Meshes/Final_Meshes/Clock/lambert1
+MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem5=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock
+MRUItem6=/Game/Solitary/Textures/Bible/Bible
+MRUItem7=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat
+MRUItem8=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat
+MRUItem9=/Game/Solitary/Textures/Door/Door_2_Solitary_Door_BaseColor
+MRUItem10=/Game/Solitary/Meshes/Final_Meshes/Clock/M_Clock_med_Clock_glass_Med_Clock_Clock_glass_Med_ClockMat_563606B649E7B3EEDEB53EA0205E6D37
+MRUItem11=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_secondhand_lowMat
+MRUItem12=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_hour_hand_lowMat
+MRUItem13=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_minute_hand_low_HandsMat
+MRUItem14=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_baseMat
+MRUItem15=/Game/Towel
+MRUItem16=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem17=/Game/Solitary/Triggers/AudioTriggers
+MRUItem18=/Game/Solitary/Triggers/AudioTrigger
+MRUItem19=/Game/Solitary/Audio/165395__shawnyboy__white-noise_Cue
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -727,6 +725,17 @@ SkeletalMesh.ImportSettings=True
 SkeletalMesh.Animation=True
 SkeletalMesh.SkinWeights=True
 SkeletalMesh.Sampling=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+MaterialExpressionReroute.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -756,6 +765,9 @@ SkeletalMesh.Sampling=True
 /Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat.Solitary_CellDoor_Door_Flap_DoorFlapMat=1
 /Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat.Solitary_CellDoor_Window_Flap_WindowMat=1
 /Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock.Clock_med_Clock_glass_Med_Clock=1
+/Game/Solitary/Meshes/Final_Meshes/Clock/lambert1.lambert1=1
+/Game/Solitary/Meshes/Final_Meshes/Clock/clock.clock=1
+/Game/Solitary/Animations/clock/clock_12_to_12_Anim.clock_12_to_12_Anim=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -805,6 +817,29 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
 UNR=C:/Users/Ultimate i5/Documents/GitHub/The-Hole/The_Hole/Content/Solitary/Maps
@@ -1552,6 +1587,9 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Bo
 MaterialInstanceConstant=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Solitary/Animations/clock/clock_12_to_12_Anim.clock_12_to_12_Anim;
+RecentlyPlaced=/Game/Solitary/Animations/clock/clock_12_to_12.clock_12_to_12;
+RecentlyPlaced=/Game/Solitary/Animations/clock_12_to_12.clock_12_to_12;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/clock.clock;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Hands_Clock_hour_hand_low.Clock_med_Med_Clock_Hands_Clock_hour_hand_low;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Clock_minute_hand_low_Hands.Clock_med_Med_Clock_Clock_minute_hand_low_Hands;
@@ -1569,9 +1607,6 @@ RecentlyPlaced=/Game/Solitary/Meshes/lambert1.lambert1;
 RecentlyPlaced=/Game/Solitary/Meshes/door.door;
 RecentlyPlaced=/Game/Solitary/Meshes/desk.desk;
 RecentlyPlaced=/Game/Solitary/Meshes/bed.bed;
-RecentlyPlaced=/Game/Solitary/Meshes/toilet.toilet;
-RecentlyPlaced=/Game/AVRFramework/Blueprints/Helpers/BP_Helper_Debug.BP_Helper_Debug;
-RecentlyPlaced=/Game/AVRFramework/Blueprints/UI/Panel/BP_Menu.BP_Menu;
 
 [DetailPropertyExpansion]
 BP_GameMode_Solitary_C="\"Object.Levels.Levels\" "
@@ -1581,10 +1616,12 @@ GameModeBase="\"Object.Levels.Levels\" "
 Info="\"Object.Levels.Levels\" "
 BP_Info_Controls_Solitary_C="\"Object.Controls.ControllerSet\" "
 BP_Info_Controls_C="\"Object.Controls.ControllerSet\" "
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 BP_Info_Level_Solitary_Level1_C="\"Object.StreamingLevel.LevelsToLoad\" "
 BP_Info_Level_C="\"Object.StreamingLevel.LevelsToLoad\" "
 BP_Info_Level_Solitary_Menu_C="\"Object.StreamingLevel.LevelsToLoad\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1763,6 +1800,10 @@ AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
 
+[/Script/UnrealEd.FbxImportUI]
+bImportAnimations=True
+bImportTextures=False
+
 [SuppressableDialogs]
 Warning_EditingDefaultMaterial=False
 
@@ -1772,5 +1813,11 @@ PrimType=1
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=True
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 
