--- a/The_Hole/Config/DefaultEngine.ini
+++ b/The_Hole/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AVRFramework/Experiences/Demospace/Maps/Streaming/Map_Demo_Menu.Map_Demo_Menu
+EditorStartupMap=/Game/Solitary/Maps/Solitary.Solitary
 GlobalDefaultGameMode=/Game/Solitary/Info/BP_GameMode_Solitary.BP_GameMode_Solitary_C
 GameInstanceClass=/Game/AVRFramework/Framework/BP_GameInstance_Main.BP_GameInstance_Main_C
 GameDefaultMap=/Game/AVRFramework/Maps/Map_Intro.Map_Intro
