--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -117,25 +117,25 @@ CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
-MRUItem1=/Game/Solitary/Meshes/Final_Meshes/Clock/clock
-MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_glass_Med_ClockMat
-MRUItem3=/Game/Solitary/Meshes/Final_Meshes/Clock/lambert1
-MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem5=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock
-MRUItem6=/Game/Solitary/Textures/Bible/Bible
-MRUItem7=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Door_Flap_DoorFlapMat
-MRUItem8=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_Window_Flap_WindowMat
-MRUItem9=/Game/Solitary/Textures/Door/Door_2_Solitary_Door_BaseColor
-MRUItem10=/Game/Solitary/Meshes/Final_Meshes/Clock/M_Clock_med_Clock_glass_Med_Clock_Clock_glass_Med_ClockMat_563606B649E7B3EEDEB53EA0205E6D37
-MRUItem11=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_secondhand_lowMat
-MRUItem12=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Hands_Clock_hour_hand_lowMat
-MRUItem13=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_minute_hand_low_HandsMat
-MRUItem14=/Game/Solitary/Meshes/Final_Meshes/Clock/Med_Clock_Clock_baseMat
-MRUItem15=/Game/Towel
-MRUItem16=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem17=/Game/Solitary/Triggers/AudioTriggers
-MRUItem18=/Game/Solitary/Triggers/AudioTrigger
-MRUItem19=/Game/Solitary/Audio/165395__shawnyboy__white-noise_Cue
+MRUItem1=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
+MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
+MRUItem3=/Game/AVRFramework/Framework/BP_GameInstance_Main
+MRUItem4=/Game/Solitary/Info/BP_GameMode_Solitary
+MRUItem5=/Game/Solitary/Triggers/Test2
+MRUItem6=/Game/Solitary/Triggers/Test
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
+MRUItem9=/Game/Solitary/Triggers/AudioTriggers
+MRUItem10=/Game/Solitary/Triggers/Walk_Start_Stop
+MRUItem11=/Game/Solitary/Triggers/Disappear_Walk
+MRUItem12=/Game/Solitary/Triggers/ChainAnim
+MRUItem13=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
+MRUItem14=/Game/Solitary/Triggers/Walk_Disappear
+MRUItem15=/Game/AVRFramework/Meshes/Pawn/Manequin/SMesh_Framework_Movement_Mannequin
+MRUItem16=/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint
+MRUItem17=/Game/Solitary/Triggers/TriggerBox
+MRUItem18=/Game/Solitary/Animations/Note_5/TheHole_Note5
+MRUItem19=/Game/Solitary/Meshes/Final_Meshes/Clock/clock
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -736,6 +736,143 @@ AnimSequence.File Path=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
 MaterialExpressionReroute.MaterialExpression=True
+Walk_Disappear_C.Tick=True
+TriggerBox_C.Default=True
+ThirdPersonWalk_Blueprint_C.Tick=True
+ThirdPersonWalk_Blueprint_C.Rendering=True
+ThirdPersonWalk_Blueprint_C.Replication=True
+ThirdPersonWalk_Blueprint_C.Collision=True
+ThirdPersonWalk_Blueprint_C.Input=True
+ThirdPersonWalk_Blueprint_C.Actor=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+K2Node_CallFunction.Graph=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+ObjectProperty.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+Walk_Disappear_C.Default=True
+Disappear_Walk_C.Tick=True
+Disappear_Walk_C.Rendering=True
+Disappear_Walk_C.Replication=True
+Disappear_Walk_C.Collision=True
+Disappear_Walk_C.Input=True
+Disappear_Walk_C.Actor=True
+ChainAnim_C.TransformCommon=True
+ChainAnim_C.Animation=True
+ChainAnim_C.Mesh=True
+ChainAnim_C.Materials=True
+ChainAnim_C.Default=True
+ChainAnim_C.Physics=True
+ChainAnim_C.Collision=True
+ChainAnim_C.Clothing=True
+ChainAnim_C.Lighting=True
+ChainAnim_C.MasterPoseComponent=True
+ChainAnim_C.ClothingSimulation=True
+ChainAnim_C.Rendering=True
+ChainAnim_C.SkinWeights=True
+ChainAnim_C.VirtualTexture=True
+ChainAnim_C.Tags=True
+ChainAnim_C.Activation=True
+ChainAnim_C.Cooking=True
+ChainAnim_C.Replication=True
+ChainAnim_C.Input=True
+ChainAnim_C.Actor=True
+AudioTriggers_C.TransformCommon=True
+Disappear_Walk_C.TransformCommon=True
+Disappear_Walk_C.Animation=True
+Disappear_Walk_C.Mesh=True
+Disappear_Walk_C.Materials=True
+Disappear_Walk_C.Clothing=True
+Disappear_Walk_C.Physics=True
+Disappear_Walk_C.MasterPoseComponent=True
+Disappear_Walk_C.Lighting=True
+Disappear_Walk_C.ClothingSimulation=True
+Disappear_Walk_C.SkinWeights=True
+Disappear_Walk_C.VirtualTexture=True
+Disappear_Walk_C.Tags=True
+Disappear_Walk_C.Activation=True
+Disappear_Walk_C.Cooking=True
+ChainAnim_C.Tick=True
+Walk_Start_Stop_C.Tick=True
+Walk_Start_Stop_C.Rendering=True
+Walk_Start_Stop_C.Replication=True
+Walk_Start_Stop_C.Collision=True
+Walk_Start_Stop_C.Input=True
+Walk_Start_Stop_C.Actor=True
+Comp_GazeView_C.Variable=True
+Comp_GazeView_C.TransformCommon=True
+Comp_GazeView_C.Sockets=True
+Comp_GazeView_C.Settings=True
+Comp_GazeView_C.Sound=True
+Comp_GazeView_C.ProgressBar=True
+Comp_GazeView_C.Rendering=True
+Comp_GazeView_C.Tags=True
+Comp_GazeView_C.ComponentReplication=True
+Comp_GazeView_C.Activation=True
+Comp_GazeView_C.Cooking=True
+Comp_GazeView_C.Events=True
+Disappear_Walk_C.Variable=True
+Disappear_Walk_C.Sockets=True
+Disappear_Walk_C.ComponentReplication=True
+Disappear_Walk_C.Events=True
+ChainAnim_C.Variable=True
+ChainAnim_C.Sockets=True
+ChainAnim_C.ComponentReplication=True
+ChainAnim_C.Events=True
+Walk_Start_Stop_C.TransformCommon=True
+Walk_Start_Stop_C.Animation=True
+Walk_Start_Stop_C.Mesh=True
+Walk_Start_Stop_C.Materials=True
+Walk_Start_Stop_C.Clothing=True
+Walk_Start_Stop_C.Physics=True
+Walk_Start_Stop_C.MasterPoseComponent=True
+Walk_Start_Stop_C.Lighting=True
+Walk_Start_Stop_C.ClothingSimulation=True
+Walk_Start_Stop_C.SkinWeights=True
+Walk_Start_Stop_C.VirtualTexture=True
+Walk_Start_Stop_C.Tags=True
+Walk_Start_Stop_C.Activation=True
+Walk_Start_Stop_C.Cooking=True
+PlayerCollission_AnimationTrigger_C.Tick=True
+PlayerCollission_AnimationTrigger_C.Rendering=True
+PlayerCollission_AnimationTrigger_C.Replication=True
+PlayerCollission_AnimationTrigger_C.Collision=True
+PlayerCollission_AnimationTrigger_C.Input=True
+PlayerCollission_AnimationTrigger_C.Actor=True
+Test_C.Tick=True
+Test_C.Default=True
+Test_C.Rendering=True
+Test_C.Replication=True
+Test_C.Collision=True
+Test_C.Input=True
+Test_C.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Events=True
+Test2_C.Tick=True
+Test2_C.Rendering=True
+Test2_C.Replication=True
+Test2_C.Collision=True
+Test2_C.Input=True
+Test2_C.Actor=True
+Test2_C.TransformCommon=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+Test_C.TransformCommon=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+EditorNotifyObject.AnimNotify=True
+EditorNotifyObject.Trigger Settings=True
+EditorNotifyObject.Category=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -768,12 +905,24 @@ MaterialExpressionReroute.MaterialExpression=True
 /Game/Solitary/Meshes/Final_Meshes/Clock/lambert1.lambert1=1
 /Game/Solitary/Meshes/Final_Meshes/Clock/clock.clock=1
 /Game/Solitary/Animations/clock/clock_12_to_12_Anim.clock_12_to_12_Anim=1
+/Game/Solitary/Triggers/Walk_Disappear.Walk_Disappear=1
+/Game/Solitary/Triggers/TriggerBox.TriggerBox=1
+/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint.ThirdPersonWalk_Blueprint=1
+/Game/AVRFramework/Meshes/Pawn/Manequin/SMesh_Framework_Movement_Mannequin.SMesh_Framework_Movement_Mannequin=1
+/Game/Solitary/Triggers/ChainAnim.ChainAnim=1
+/Game/Solitary/Triggers/Disappear_Walk.Disappear_Walk=1
+/Game/Solitary/Triggers/Walk_Start_Stop.Walk_Start_Stop=1
+/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun.ThirdPersonRun=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger.PlayerCollission_AnimationTrigger=1
+/Game/Solitary/Triggers/Collision_Test.Collision_Test=1
+/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat.Solitary_CellDoor_DoorFrameMat=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1587,6 +1736,13 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Bo
 MaterialInstanceConstant=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Solitary/Triggers/ChainAnim.ChainAnim;
+RecentlyPlaced=/Game/Solitary/Triggers/AudioTriggers.AudioTriggers;
+RecentlyPlaced=/Game/Solitary/Triggers/Collision_Test.Collision_Test;
+RecentlyPlaced=/Game/Solitary/Triggers/Test2.Test2;
+RecentlyPlaced=/Game/Solitary/Triggers/Walk_Start_Stop.Walk_Start_Stop;
+RecentlyPlaced=/Game/Solitary/Triggers/Disappear_Walk.Disappear_Walk;
+RecentlyPlaced=/Game/Solitary/Animations/Note_5/TheHole_Note5.TheHole_Note5;
 RecentlyPlaced=/Game/Solitary/Animations/clock/clock_12_to_12_Anim.clock_12_to_12_Anim;
 RecentlyPlaced=/Game/Solitary/Animations/clock/clock_12_to_12.clock_12_to_12;
 RecentlyPlaced=/Game/Solitary/Animations/clock_12_to_12.clock_12_to_12;
@@ -1600,13 +1756,6 @@ RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Towel/Towel.Towel;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Pencil/Pencil_low03.Pencil_low03;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Bible/Bible_low03.Bible_low03;
 RecentlyPlaced=/Game/Solitary/TriggerBox.TriggerBox;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Solitary/Meshes/Solitary.Solitary;
-RecentlyPlaced=/Game/Solitary/Meshes/lambert1.lambert1;
-RecentlyPlaced=/Game/Solitary/Meshes/door.door;
-RecentlyPlaced=/Game/Solitary/Meshes/desk.desk;
-RecentlyPlaced=/Game/Solitary/Meshes/bed.bed;
 
 [DetailPropertyExpansion]
 BP_GameMode_Solitary_C="\"Object.Levels.Levels\" "
@@ -1616,7 +1765,7 @@ GameModeBase="\"Object.Levels.Levels\" "
 Info="\"Object.Levels.Levels\" "
 BP_Info_Controls_Solitary_C="\"Object.Controls.ControllerSet\" "
 BP_Info_Controls_C="\"Object.Controls.ControllerSet\" "
-Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object=
 BP_Info_Level_Solitary_Level1_C="\"Object.StreamingLevel.LevelsToLoad\" "
 BP_Info_Level_C="\"Object.StreamingLevel.LevelsToLoad\" "
 BP_Info_Level_Solitary_Menu_C="\"Object.StreamingLevel.LevelsToLoad\" "
@@ -1806,6 +1955,8 @@ bImportTextures=False
 
 [SuppressableDialogs]
 Warning_EditingDefaultMaterial=False
+ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [MaterialEditor]
 PrimType=1
@@ -1813,11 +1964,22 @@ PrimType=1
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=True
+BoolProperty.Variable=True
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+
+[/Script/Kismet.BlueprintPaletteFavorites]
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveBeginPlay",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveTick",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetPlayerPawn",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.Actor:GetTransform",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
+CurrentProfile=CustomProfile
 
 
