--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,28 +114,29 @@ LastLevel=/Game/Solitary/Maps/Solitary
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Solitary/Audio/13712__acclivity__clockticking_Cue.13712__acclivity__clockticking_Cue
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
-MRUItem1=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
-MRUItem2=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
-MRUItem3=/Game/AVRFramework/Framework/BP_GameInstance_Main
-MRUItem4=/Game/Solitary/Info/BP_GameMode_Solitary
-MRUItem5=/Game/Solitary/Triggers/Test2
-MRUItem6=/Game/Solitary/Triggers/Test
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
-MRUItem9=/Game/Solitary/Triggers/AudioTriggers
-MRUItem10=/Game/Solitary/Triggers/Walk_Start_Stop
-MRUItem11=/Game/Solitary/Triggers/Disappear_Walk
-MRUItem12=/Game/Solitary/Triggers/ChainAnim
-MRUItem13=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
-MRUItem14=/Game/Solitary/Triggers/Walk_Disappear
-MRUItem15=/Game/AVRFramework/Meshes/Pawn/Manequin/SMesh_Framework_Movement_Mannequin
-MRUItem16=/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint
-MRUItem17=/Game/Solitary/Triggers/TriggerBox
-MRUItem18=/Game/Solitary/Animations/Note_5/TheHole_Note5
-MRUItem19=/Game/Solitary/Meshes/Final_Meshes/Clock/clock
+MRUItem0=/Game/Solitary/Audio/13712__acclivity__clockticking_Cue
+MRUItem1=/Game/Solitary/Triggers/AudioTriggers
+MRUItem2=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
+MRUItem3=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
+MRUItem4=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
+MRUItem5=/Game/AVRFramework/Framework/BP_GameInstance_Main
+MRUItem6=/Game/Solitary/Info/BP_GameMode_Solitary
+MRUItem7=/Game/Solitary/Triggers/Test2
+MRUItem8=/Game/Solitary/Triggers/Test
+MRUItem9=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem10=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
+MRUItem11=/Game/Solitary/Triggers/Walk_Start_Stop
+MRUItem12=/Game/Solitary/Triggers/Disappear_Walk
+MRUItem13=/Game/Solitary/Triggers/ChainAnim
+MRUItem14=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
+MRUItem15=/Game/Solitary/Triggers/Walk_Disappear
+MRUItem16=/Game/AVRFramework/Meshes/Pawn/Manequin/SMesh_Framework_Movement_Mannequin
+MRUItem17=/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint
+MRUItem18=/Game/Solitary/Triggers/TriggerBox
+MRUItem19=/Game/Solitary/Animations/Note_5/TheHole_Note5
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -873,6 +874,7 @@ MaterialExpressionTextureCoordinate.MaterialExpression=True
 EditorNotifyObject.AnimNotify=True
 EditorNotifyObject.Trigger Settings=True
 EditorNotifyObject.Category=True
+SoundNodeWavePlayer.WavePlayer=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -917,6 +919,7 @@ EditorNotifyObject.Category=True
 /Game/Solitary/Triggers/PlayerCollission_AnimationTrigger.PlayerCollission_AnimationTrigger=1
 /Game/Solitary/Triggers/Collision_Test.Collision_Test=1
 /Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat.Solitary_CellDoor_DoorFrameMat=1
+/Game/Solitary/Audio/13712__acclivity__clockticking_Cue.13712__acclivity__clockticking_Cue=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1736,8 +1739,8 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Bo
 MaterialInstanceConstant=
 
 [PlacementMode]
-RecentlyPlaced=/Game/Solitary/Triggers/ChainAnim.ChainAnim;
 RecentlyPlaced=/Game/Solitary/Triggers/AudioTriggers.AudioTriggers;
+RecentlyPlaced=/Game/Solitary/Triggers/ChainAnim.ChainAnim;
 RecentlyPlaced=/Game/Solitary/Triggers/Collision_Test.Collision_Test;
 RecentlyPlaced=/Game/Solitary/Triggers/Test2.Test2;
 RecentlyPlaced=/Game/Solitary/Triggers/Walk_Start_Stop.Walk_Start_Stop;
